[gd_scene load_steps=10 format=3 uid="uid://bouxaqsoqpcbs"]

[ext_resource type="Texture2D" uid="uid://dn5bv2axwgi2o" path="res://assets/tileset.png" id="1_v03rh"]
[ext_resource type="Script" path="res://button/button.gd" id="2_db0rf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3gkut"]
size = Vector2(16, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_73ort"]
atlas = ExtResource("1_v03rh")
region = Rect2(176, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hn0aa"]
atlas = ExtResource("1_v03rh")
region = Rect2(192, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqu0m"]
atlas = ExtResource("1_v03rh")
region = Rect2(192, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hmme"]
atlas = ExtResource("1_v03rh")
region = Rect2(176, 112, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_l1rpk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_73ort")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hn0aa")
}],
"loop": false,
"name": &"press",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqu0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hmme")
}],
"loop": false,
"name": &"release",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k6kot"]
size = Vector2(16, 5)

[node name="Button" type="StaticBody2D"]
script = ExtResource("2_db0rf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 3)
shape = SubResource("RectangleShape2D_3gkut")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(8, -4)
sprite_frames = SubResource("SpriteFrames_l1rpk")
animation = &"press"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 1.5)
shape = SubResource("RectangleShape2D_k6kot")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
